apps/media/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    tailscale.com/proxy-group: homelab-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - prowlarr
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  name: http
